--- a/cv.html
+++ b/cv.html
@@ -418,6 +418,28 @@
           </ul>
         </article>
 
+        <article>
+          <h2>2023 -: wuunder</h2>
+          <p class='black'>
+            senior software developer
+          </p>
+
+          <ul class='tags'>
+            <li>elixir</li>
+            <li>phoenix liveview</li>
+            <li>javascript</li>
+            <li>html</li>
+            <li>css</li>
+            <li>git</li>
+            <li>macvim</li>
+            <li>postgresql</li>
+            <li>postgis</li>
+            <li>linux</li>
+            <li>osx</li>
+            <li>aws</li>
+          </ul>
+        </article>
+
       <article>
         <h2>HOBBIES</h2>
 
