--- a/cv.html
+++ b/cv.html
@@ -1,7 +1,7 @@
 <!-- DOCTYPE -->
 <html>
   <head>
-    <link href='http://fonts.googleapis.com/css?family=Graduate' rel='stylesheet' type='text/css'>
+    <link href='//fonts.googleapis.com/css?family=Graduate' rel='stylesheet' type='text/css'>
     <link href='reset.css' rel='stylesheet' type='text/css'>
     <link href='index.css' rel='stylesheet' type='text/css'>
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
