Updated portfolio part 1

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
         <h2>WHO AM I</h2>
         <p class='black'>
           MY NAME IS <span>DIEDERICK LAWSON</span>
-          I AM A 41 YEAR OLD FREELANCE SENIOR FULL STACK DEVELOPER
-        </p>
-        <p class='black'>
-          WORKING AS A FREELANCER BUT ALWAYS INTERESTED IN NEW CHALLENGES.
+          I AM A 43 YEAR OLD SENIOR FULL STACK DEVELOPER
         </p>
       </article>
 
@@ -42,8 +39,8 @@
           BECAME MY JOB.
         </p>
         <p class='block'>
-          I HAVE OVER 20 YEARS WORK EXPERIENCE IN IT. I AM
-          SPECIALIZED IN VARIOUS PROGRAMMING LANGUAGES AND LIBRARIES:
+          I HAVE OVER 20 YEARS WORK EXPERIENCE IN IT. I HAVE EXPERIENCE WITH A VARIETY
+          OF PROGRAMMING LANGUAGES AND FRAMEWORKS:
         </p>
         <ul class='tags'>
           <li>ELIXIR</li>
@@ -67,56 +64,50 @@
       <article>
         <h2>SPECIALTIES</h2>
         <p class='block'>
-          SENIOR AGILE FULL STACK DEVELOPER WITH A HEART FOR CODE &amp; FRONTEND/DESIGN.
-          I <3 MAKING PRETTY THINGS THAT HAVE A GREAT UX.
+            I AM A EXPERIENCED SENIOR FULL STACK DEVELOPER THAT BRIDGES THE GAP
+            BETWEEN ENGINEERING AND STAKEHOLDERS. I HAVE A PASSION FOR WRITING CLEAN CODE
+            AND HAVE A HEART FOR GREAT UX.
         </p>
       </article>
 
       <article>
         <h2>TOOLS OF CHOICE</h2>
         <p class='block'>
-          STARTED WITH DOS. MADE THE TRANSITION TO WINDOWS AND ENDED UP WITH *NIX.
+          STARTED WITH DOS. MADE THE TRANSITION TO WINDOWS AND ENDED UP WITH A *NIX ENVIRONMENT.
         </p>
         <ul class='tags'>
           <li>MACBOOK PRO</li>
           <li>OSX</li>
-          <li>VSCODE</li>
+          <li>ZED</li>
           <li>GIT</li>
-          <li>ITERM2</li>
-          <li>SLACK</li>
-          <li>AFFINITY DESIGNER</li>
         </ul>
       </article>
 
       <article>
         <h2>THINGS I LIKE</h2>
         <ul class='tags'>
-          <li>FEBO</li>
+          <li>FUNCTIONAL PROGRAMMING</li>
           <li>ELIXIR</li>
           <li>OPENSOURCE</li>
-          <li>TESTS</li>
-          <li>CHROME</li>
-          <li>GIT</li>
-          <li>ANDIJVIESTAMPPOT</li>
+          <li>TDD</li>
         </ul>
       </article>
 
       <article>
         <h2>THINGS I DON'T LIKE</h2>
         <ul class='tags'>
-          <li>SENSEO CREMA</li>
-          <li>INTERNET EXPLORER</li>
           <li>PHP</li>
-          <li>CSV</li>
-          <li>CVS</li>
-          <li>EXCEL</li>
-          <li>SVN</li>
+          <li>UNTESTED CODE</li>
+          <li>POOR UX</li>
+          <li>EXCELSHEETS</li>
         </ul>
       </article>
 
       <article>
         <h2>SOME OF THE THINGS I MADE</h2>
         <ul class='tags links'>
+          <li><a href="http://github.com/wuunder/http_ex">HTTP_EX</a></li>
+          <li><a href="http://github.com/dkln/pipeline_flow">PIPELINE_FLOW</a></li>
           <li><a href="https://www.walterliving.com">WALTERLIVING.COM</a></li>
           <li><a href="https://www.betacorp.nl">BETACORP.NL</a></li>
           <li><a href="https://www.panopta.nl">PANOPTA.NL</a></li>
