Updated portfolio part 2

--- a/cv.html
+++ b/cv.html
@@ -21,7 +21,7 @@
         <h2 class='black'>DIEDERICK LAWSON</h2>
         <h2>PERSONAL DETAILS</h2>
         <p class='black'>
-          41 YEARS<br />
+          43 YEARS<br />
           LEIDEN<br />
           THE NETHERLANDS
         </p>
@@ -428,12 +428,15 @@
             <li>elixir</li>
             <li>phoenix liveview</li>
             <li>javascript</li>
+            <li>kubernetes</li>
+            <li>ai</li>
             <li>html</li>
             <li>css</li>
             <li>git</li>
             <li>macvim</li>
             <li>postgresql</li>
             <li>postgis</li>
+            <li>timescaledb</li>
             <li>linux</li>
             <li>osx</li>
             <li>aws</li>
